--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -507,7 +507,7 @@
     <string name="lock_settings_picker_biometric_message" msgid="2609666443527262781">"Ընտրեք էկրանի կողպման լրացուցիչ եղանակը"</string>
     <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"Եթե մոռանաք էկրանի ապակողպման եղանակը, ՏՏ ադմինիստրատորը չի կարողանա փոխել այն։"</string>
     <string name="lock_settings_picker_admin_restricted_personal_message_action" msgid="5956615234246626264">"Առանձին կողպում դրեք աշխատանքային պրոֆիլի համար"</string>
-    <string name="lock_settings_picker_profile_message" msgid="9142379549980873478">"Եթե մոռանաք կողպման այս եղանակը, ՏՏ ադմինիստրատորը կզրոյացնի այն"</string>
+    <string name="lock_settings_picker_profile_message" msgid="9142379549980873478">"Եթե մոռանաք կողպման այս եղանակը, խնդրեք ՏՏ ադմինիստրատորին զրոյացնել այն"</string>
     <string name="setup_lock_settings_options_button_label" msgid="6098297461618298505">"Էկրանի կողպման տարբերակներ"</string>
     <string name="setup_lock_settings_options_dialog_title" msgid="7985107300517468569">"Էկրանի կողպման տարբերակներ"</string>
     <string name="lock_screen_auto_pin_confirm_title" msgid="3012128112186088375">"Ավտոմատ կերպով հաստատել ապակողպումը"</string>
@@ -3185,7 +3185,7 @@
     <string name="lock_screen_notifs_redact_work" msgid="3833920196569208430">"Աշխատանքային պրոֆիլի գաղտնի տվյալներ պարունակող ծանուցումներ"</string>
     <string name="lock_screen_notifs_redact_work_summary" msgid="3238238380405430156">"Ցույց տալ աշխատանքային պրոֆիլի գաղտնի տվյալները կողպէկրանին"</string>
     <string name="lock_screen_notifications_summary_show" msgid="6540443483088311328">"Ծանուցումները ցույց տալ ամբողջությամբ"</string>
-    <string name="lock_screen_notifications_summary_hide" msgid="7837303171531166789">"Կոնֆիդենցիալ տվյալները ցույց տալ միայն ապակողպված էկրանին"</string>
+    <string name="lock_screen_notifications_summary_hide" msgid="7837303171531166789">"Զգայուն բովանդակությունը ցույց տալ միայն ապակողպված էկրանին"</string>
     <string name="lock_screen_notifications_summary_disable" msgid="3388290397947365744">"Ցույց չտալ ծանուցումներ"</string>
     <string name="lock_screen_notifications_interstitial_message" msgid="4688399629301178487">"Կարգավորեք ծանուցումների ցուցադրումը կողպէկրանին"</string>
     <string name="lock_screen_notifications_interstitial_title" msgid="1360388192096354315">"Կողպէկրան"</string>
