--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -1400,9 +1400,9 @@
     <string name="settings_license_activity_loading" msgid="1653151990366578827">"ಲೋಡ್ ಆಗುತ್ತಿದೆ..."</string>
     <string name="settings_safetylegal_activity_loading" msgid="1757860124583063395">"ಲೋಡ್ ಆಗುತ್ತಿದೆ..."</string>
     <string name="lockpassword_choose_your_password_header" msgid="2407205113298094824">"ಪಾಸ್‌ವರ್ಡ್ ಸೆಟ್ ಮಾಡಿ"</string>
-    <string name="lockpassword_choose_your_profile_password_header" msgid="7038997227611893312">"ಕೆಲಸದ ಪಾಸ್‌ವರ್ಡ್ ಹೊಂದಿಸಿ"</string>
+    <string name="lockpassword_choose_your_profile_password_header" msgid="7038997227611893312">"ಕೆಲಸದ ಪಾಸ್‌ವರ್ಡ್ ಸೆಟ್ ಮಾಡಿ"</string>
     <string name="lockpassword_choose_your_pin_header" msgid="7754265746504679473">"ಪಿನ್ ಸೆಟ್ ಮಾಡಿ"</string>
-    <string name="lockpassword_choose_your_profile_pin_header" msgid="4581749963670819048">"ಕೆಲಸದ ಪಿನ್ ಹೊಂದಿಸಿ"</string>
+    <string name="lockpassword_choose_your_profile_pin_header" msgid="4581749963670819048">"ಕೆಲಸದ ಪಿನ್ ಸೆಟ್ ಮಾಡಿ"</string>
     <string name="lockpassword_choose_your_pattern_header" msgid="5674909390779586252">"ಪ್ಯಾಟರ್ನ್ ಸೆಟ್ ಮಾಡಿ"</string>
     <string name="lockpassword_choose_your_pattern_description" msgid="6808109256008481046">"ಹೆಚ್ಚಿನ ಭದ್ರತೆಗಾಗಿ, ಸಾಧನವನ್ನು ಅನ್‌ಲಾಕ್ ಮಾಡುವುದಕ್ಕಾಗಿ ಪ್ಯಾಟರ್ನ್ ಅನ್ನು ಸೆಟ್ ಮಾಡಿ"</string>
     <string name="lockpassword_choose_your_profile_pattern_header" msgid="3101811498330756641">"ಕೆಲಸದ ಪ್ಯಾಟರ್ನ್ ಹೊಂದಿಸಿ"</string>
