--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -3907,7 +3907,7 @@
     <string name="system_navigation_title" msgid="4890381153527184636">"Навигация режими"</string>
     <string name="swipe_up_to_switch_apps_title" msgid="6677266952021118342">"2 баскыч менен чабыттоо"</string>
     <string name="swipe_up_to_switch_apps_summary" msgid="1415457307836359560">"Башка колдонмого которулуу үчүн Башкы бет баскычынан экранды жогору карай сүрүңүз. Бардык колдонмолорду көрүү үчүн дагы бир жолу сүрүңүз. Артка кайтуу үчүн \"артка\" баскычын таптап коюңуз."</string>
-    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"Сактык жана өзгөчө кырдаал"</string>
+    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"Коопсуздук жана кырсыктаган учурлар"</string>
     <string name="emergency_dashboard_summary" msgid="401033951074039302">"Кырсыктаганда чалуу, медициналык маалымат, эскертүүлөр"</string>
     <string name="edge_to_edge_navigation_title" msgid="714427081306043819">"Жаңсап чабыттоо"</string>
     <string name="edge_to_edge_navigation_summary" msgid="8497033810637690561">"Башкы бетке өтүү үчүн экранды ылдыйдан өйдө сүрүңүз. Башка колдонмого которулуу үчүн экранды ылдыйдан өйдө сүрүңүз да, бир аз коё бербей кармап туруңуз. Артка кайтуу үчүн экрандын оң же сол жагына сүрүңүз."</string>
