--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -502,7 +502,7 @@
     <string name="lock_settings_picker_new_lock_title" msgid="3113042086804290919">"Изберете заклучување екран"</string>
     <string name="lock_settings_picker_update_lock_title" msgid="536853138943415927">"Изберете ново заклучување"</string>
     <string name="lock_settings_picker_new_profile_lock_title" msgid="2270462215256413800">"Изберете заклучување за работни апликации"</string>
-    <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"Изберете ново заклучување за работни апликации"</string>
+    <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"Изберете ново заклучување за работниот профил"</string>
     <string name="lock_settings_picker_biometrics_added_security_message" msgid="1105247657304421299">"За дополнителна безбедност, поставете резервно заклучување екран"</string>
     <string name="lock_settings_picker_biometric_message" msgid="2609666443527262781">"Изберете резервен метод за заклучување на екранот"</string>
     <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"Ако го заборавите заклучувањето екран, IT-администраторот не може да го ресетира."</string>
@@ -1400,9 +1400,9 @@
     <string name="settings_license_activity_loading" msgid="1653151990366578827">"Се вчитува..."</string>
     <string name="settings_safetylegal_activity_loading" msgid="1757860124583063395">"Се вчитува..."</string>
     <string name="lockpassword_choose_your_password_header" msgid="2407205113298094824">"Поставете лозинка"</string>
-    <string name="lockpassword_choose_your_profile_password_header" msgid="7038997227611893312">"Поставете лозинка за работен профил"</string>
+    <string name="lockpassword_choose_your_profile_password_header" msgid="7038997227611893312">"Поставете лозинка за работниот профил"</string>
     <string name="lockpassword_choose_your_pin_header" msgid="7754265746504679473">"Поставете PIN"</string>
-    <string name="lockpassword_choose_your_profile_pin_header" msgid="4581749963670819048">"Поставете PIN за работен профил"</string>
+    <string name="lockpassword_choose_your_profile_pin_header" msgid="4581749963670819048">"Поставете PIN за работниот профил"</string>
     <string name="lockpassword_choose_your_pattern_header" msgid="5674909390779586252">"Поставете шема"</string>
     <string name="lockpassword_choose_your_pattern_description" msgid="6808109256008481046">"За дополнителна безбедност, поставете шема за отклучување на уредот"</string>
     <string name="lockpassword_choose_your_profile_pattern_header" msgid="3101811498330756641">"Поставете шема за работен профил"</string>
@@ -1588,7 +1588,7 @@
     <string name="app_disable_dlg_text" msgid="2449382902751908916">"Ако ја оневозможите оваа апликација, Android и другите апликации можеби веќе нема да функционираат како што треба. Имајте предвид, не може да ја избришете апликацијава бидејќи е однапред инсталирана на уредот. Ако ја оневозможите, ќе ја исклучите и ќе ја сокриете на уредот."</string>
     <string name="app_install_details_group_title" msgid="1172114479073704677">"Продавница"</string>
     <string name="app_install_details_title" msgid="7783556181897142187">"Детали за апликацијата"</string>
-    <string name="app_install_details_summary" msgid="2013043219249992373">"Апликација инсталирана од <xliff:g id="APP_STORE">%1$s</xliff:g>"</string>
+    <string name="app_install_details_summary" msgid="2013043219249992373">"Апликацијата е инсталирана од <xliff:g id="APP_STORE">%1$s</xliff:g>"</string>
     <string name="instant_app_details_summary" msgid="417197491598208216">"Повеќе информации на <xliff:g id="APP_STORE">%1$s</xliff:g>"</string>
     <string name="app_ops_running" msgid="6127474473137428721">"Се извршува"</string>
     <string name="app_ops_never_used" msgid="9038133162371204506">"(Никогаш не е користена)"</string>
@@ -2547,7 +2547,7 @@
     <string name="data_usage_background_label" msgid="5363718469293175279">"Во заднина:"</string>
     <string name="data_usage_app_settings" msgid="5693524672522122485">"Поставки на апликација"</string>
     <string name="data_usage_app_restrict_background" msgid="5728840276368097276">"Интернет во заднина"</string>
-    <string name="data_usage_app_restrict_background_summary" msgid="2997942775999602794">"Овозможи користење мобилен интернет во заднина"</string>
+    <string name="data_usage_app_restrict_background_summary" msgid="2997942775999602794">"Овозможете користење мобилен интернет во заднина"</string>
     <string name="data_usage_app_restrict_background_summary_disabled" msgid="8213268097024597864">"За ограничен интернет во заднина за апликацијава, поставете граница за мобилен интернет."</string>
     <string name="data_usage_app_restrict_dialog_title" msgid="5383874438677899255">"Ограничи податоци во заднина?"</string>
     <string name="data_usage_app_restrict_dialog" msgid="5534272311979978297">"Оваа функција може да предизвика прекин на извршување на апликацијата што зависи од интернет во заднина, кога се достапни само мобилни мрежи.\n\nМоже да најдете посоодветни контроли за користење на интернетот во поставките достапни во рамките на апликацијата."</string>
@@ -3230,7 +3230,7 @@
     <string name="notification_channel_summary_min" msgid="8823399508450176842">"Собери ги известувањата во еден ред во списокот со известувања"</string>
     <string name="notification_channel_summary_low" msgid="5549662596677692000">"Без звук или вибрации"</string>
     <string name="notification_conversation_summary_low" msgid="6352818857388412326">"Без звук или вибрации и се појавува подолу во делот со разговори"</string>
-    <string name="notification_channel_summary_default" msgid="1168420867670390611">"Може да ѕвони или вибрира во зависност од поставките за уредот"</string>
+    <string name="notification_channel_summary_default" msgid="1168420867670390611">"Може да ѕвони или да вибрира во зависност од поставките за уредот"</string>
     <string name="notification_channel_summary_high" msgid="3411637309360617621">"Кога уредот е отклучен, прикажувај ги известувањата како банер на горниот дел од екранот"</string>
     <string name="notification_switch_label" msgid="8029371325967501557">"Сите известувања од „<xliff:g id="APP_NAME">%1$s</xliff:g>“"</string>
     <string name="notification_app_switch_label" msgid="4422902423925084193">"Сите известувања од <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
@@ -3263,7 +3263,7 @@
     <string name="notif_type_conversation" msgid="4383931408641374979">"Разговори"</string>
     <string name="notif_type_conversation_summary" msgid="179142405410217101">"SMS, текстуални пораки и други типови комуникација"</string>
     <string name="notif_type_alerting" msgid="4713073696855718576">"Известувања"</string>
-    <string name="notif_type_alerting_summary" msgid="4681068287836313604">"Може да ѕвони или вибрира во зависност од поставките"</string>
+    <string name="notif_type_alerting_summary" msgid="4681068287836313604">"Може да ѕвони или да вибрира во зависност од поставките"</string>
     <string name="notif_type_silent" msgid="6273951794420331010">"Безгласни"</string>
     <string name="notif_type_silent_summary" msgid="7820923063105060844">"Известувања што никогаш не пуштаат звук ниту вибрираат"</string>
     <string name="notification_listener_allowed" msgid="5536962633536318551">"Со дозвола"</string>
