--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -64,7 +64,7 @@
     <string name="bluetooth_pair_other_ear_dialog_right_ear_positive_button" msgid="533612082529204078">"उजवा कान पेअर करा"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"डावा कान पेअर करा"</string>
     <string name="bluetooth_device_controls_general" msgid="1399214835599665488">"उपलब्ध असणाऱ्या ऐकण्याच्या सर्व डिव्हाइससाठी"</string>
-    <string name="bluetooth_device_controls_title" msgid="1895676556354697234">"श्रवणयंत्राशी संबंधित सेटिंग्ज"</string>
+    <string name="bluetooth_device_controls_title" msgid="1895676556354697234">"श्रवणयंत्र डिव्हाइस सेटिंग्ज"</string>
     <string name="bluetooth_device_controls_summary" msgid="8115767735418425663">"शॉर्टकट, श्रवणयंत्राची कंपॅटिबिलिटी"</string>
     <string name="bluetooth_device_controls_specific" msgid="7706863288754077107">"या डिव्‍हाइससाठी"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"ऑडिओ आउटपुट"</string>
