--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -314,9 +314,9 @@
     <string name="security_settings_face_enroll_improve_face_alert_body_fingerprint" msgid="2469599074650327489">"ଫେସ୍ ଅନଲକ୍ ପୁଣି ସେଟ୍ ଅପ୍ କରିବା ପାଇଁ ଆପଣଙ୍କ ବର୍ତ୍ତମାନର ଫେସ୍ ମଡେଲ୍ ଡିଲିଟ୍ କରନ୍ତୁ।\n\nଆପଣଙ୍କ ଫେସ୍ ମଡେଲକୁ ସ୍ଥାୟୀ ଏବଂ ସୁରକ୍ଷିତ ଭାବରେ ଡିଲିଟ୍ କରିଦିଆଯିବ।\n\nଡିଲିଟ୍ କରିବା ପରେ ଆପଣଙ୍କ ଫୋନକୁ ଅନଲକ୍ କରିବା କିମ୍ବା ଆପଗୁଡ଼ିକରେ ପ୍ରମାଣୀକରଣ ପାଇଁ ଆପଣ ଆପଣଙ୍କର ଟିପଚିହ୍ନ, PIN, ପାଟର୍ନ କିମ୍ବା ପାସୱାର୍ଡ ଆବଶ୍ୟକ କରିବେ।"</string>
     <string name="security_settings_face_settings_use_face_category" msgid="1638314154119800188">"ଏଥିପାଇଁ ଫେସ୍ ଅନଲକ୍ ବ୍ୟବହାର କରନ୍ତୁ"</string>
     <string name="security_settings_face_settings_preferences_category" msgid="7628929873407280453">"ଫେସ ଅନଲକ ବ୍ୟବହାର କରିବା ସମୟରେ"</string>
-    <string name="security_settings_face_settings_require_attention" msgid="4395309855914391104">"ଆଖି ଖୋଲା ରଖିବା ଆବଶ୍ୟକ ହୋଇଥାଏ"</string>
+    <string name="security_settings_face_settings_require_attention" msgid="4395309855914391104">"ଆଖି ଖୋଲା ରଖିବା ଆବଶ୍ୟକ"</string>
     <string name="security_settings_face_settings_require_attention_details" msgid="2546230511769544074">"ଫୋନ୍ ଅନ୍‌ଲକ୍ କରିବା ପାଇଁ, ଆପଣଙ୍କ ଆଖି ଖୋଲା ରହିବା ଉଚିତ"</string>
-    <string name="security_settings_face_settings_require_confirmation" msgid="6603039421004198334">"ସବୁବେଳେ ସୁନିଶ୍ଚିତକରଣ ଆବଶ୍ୟକ ହୋଇଥାଏ"</string>
+    <string name="security_settings_face_settings_require_confirmation" msgid="6603039421004198334">"ସବୁବେଳେ ସୁନିଶ୍ଚିତକରଣ ଆବଶ୍ୟକ"</string>
     <string name="security_settings_face_settings_require_confirmation_details" msgid="3498729789625461914">"ଆପ୍ସରେ ଫେସ ଅନଲକ ବ୍ୟବହାର କରିବା ବେଳେ ସର୍ବଦା ସୁନିଶ୍ଚିତକରଣ ଷ୍ଟେପ ଆବଶ୍ୟକ"</string>
     <string name="security_settings_face_settings_remove_face_model" msgid="812920481303980846">"ଫେସ ମଡେଲ ଡିଲିଟ କରନ୍ତୁ"</string>
     <string name="security_settings_face_settings_enroll" msgid="3726313826693825029">"ଫେସ ଅନଲକ ସେଟ ଅପ କରନ୍ତୁ"</string>
@@ -502,12 +502,12 @@
     <string name="lock_settings_picker_new_lock_title" msgid="3113042086804290919">"ଏକ ସ୍କ୍ରିନ ଲକ ବାଛନ୍ତୁ"</string>
     <string name="lock_settings_picker_update_lock_title" msgid="536853138943415927">"ଏକ ନୂଆ ସ୍କ୍ରିନ୍ ଲକ୍ ବାଛନ୍ତୁ"</string>
     <string name="lock_settings_picker_new_profile_lock_title" msgid="2270462215256413800">"ୱାର୍କ ଆପ୍ସ ପାଇଁ ଏକ ଲକ ବାଛନ୍ତୁ"</string>
-    <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"ଏକ ନୂଆ ୱାର୍କ ଲକ୍ ବାଛନ୍ତୁ"</string>
+    <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"ଏକ ନୂଆ ୱାର୍କ ଲକ ବାଛନ୍ତୁ"</string>
     <string name="lock_settings_picker_biometrics_added_security_message" msgid="1105247657304421299">"ଅତିରିକ୍ତ ସୁରକ୍ଷା ପାଇଁ, ଏକ ବେକଅପ ସ୍କ୍ରିନ ଲକ ସେଟ କରନ୍ତୁ"</string>
     <string name="lock_settings_picker_biometric_message" msgid="2609666443527262781">"ଆପଣଙ୍କ ବେକଅପ ସ୍କ୍ରିନ ଲକ ପଦ୍ଧତି ବାଛନ୍ତୁ"</string>
     <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"ଯଦି ଆପଣ ଆପଣଙ୍କ ସ୍କ୍ରିନ ଲକ ଭୁଲି ଯାଆନ୍ତି, ଆପଣଙ୍କ IT ଆଡମିନ ତାହା ରିସେଟ କରିପାରିବେ ନାହିଁ।"</string>
     <string name="lock_settings_picker_admin_restricted_personal_message_action" msgid="5956615234246626264">"ଏକ ଅଲଗା ୱାର୍କ ଲକ ସେଟ କର"</string>
-    <string name="lock_settings_picker_profile_message" msgid="9142379549980873478">"ଯଦି ଆପଣ ଏହି ଲକଟି ଭୁଲି ଯାଆନ୍ତି, ଏହାକୁ ରିସେଟ୍ କରିବାକୁ ଆପଣଙ୍କ IT ଆଡମିନଙ୍କୁ ପଚାରନ୍ତୁ"</string>
+    <string name="lock_settings_picker_profile_message" msgid="9142379549980873478">"ଆପଣ ଏହି ଲକଟି ଭୁଲିଗଲେ, ଏହାକୁ ରିସେଟ କରିବାକୁ ଆପଣଙ୍କ IT ଆଡମିନଙ୍କୁ କୁହନ୍ତୁ"</string>
     <string name="setup_lock_settings_options_button_label" msgid="6098297461618298505">"ସ୍କ୍ରିନ୍‌ ଲକ୍‌ ବିକଳ୍ପ"</string>
     <string name="setup_lock_settings_options_dialog_title" msgid="7985107300517468569">"ସ୍କ୍ରିନ ଲକ ବିକଳ୍ପ"</string>
     <string name="lock_screen_auto_pin_confirm_title" msgid="3012128112186088375">"ଅନଲକକୁ ସ୍ୱତଃ-ସୁନିଶ୍ଚିତ କରନ୍ତୁ"</string>
@@ -1400,9 +1400,9 @@
     <string name="settings_license_activity_loading" msgid="1653151990366578827">"ଲୋଡ୍ ହେଉଛି…"</string>
     <string name="settings_safetylegal_activity_loading" msgid="1757860124583063395">"ଲୋଡ୍ କରୁଛି…"</string>
     <string name="lockpassword_choose_your_password_header" msgid="2407205113298094824">"ଏକ ପାସୱାର୍ଡ ସେଟ କରନ୍ତୁ"</string>
-    <string name="lockpassword_choose_your_profile_password_header" msgid="7038997227611893312">"ଏକ ୱାର୍କ ପାସୱାର୍ଡ ସେଟ୍ କରନ୍ତୁ"</string>
+    <string name="lockpassword_choose_your_profile_password_header" msgid="7038997227611893312">"ଏକ ୱାର୍କ ପାସୱାର୍ଡ ସେଟ କରନ୍ତୁ"</string>
     <string name="lockpassword_choose_your_pin_header" msgid="7754265746504679473">"ଏକ PIN ସେଟ କରନ୍ତୁ"</string>
-    <string name="lockpassword_choose_your_profile_pin_header" msgid="4581749963670819048">"ଏକ ୱାର୍କ PIN ସେଟ୍ କରନ୍ତୁ"</string>
+    <string name="lockpassword_choose_your_profile_pin_header" msgid="4581749963670819048">"ଏକ ୱାର୍କ PIN ସେଟ କରନ୍ତୁ"</string>
     <string name="lockpassword_choose_your_pattern_header" msgid="5674909390779586252">"ଏକ ପାଟର୍ନ ସେଟ କରନ୍ତୁ"</string>
     <string name="lockpassword_choose_your_pattern_description" msgid="6808109256008481046">"ଅତିରିକ୍ତ ସୁରକ୍ଷା ପାଇଁ, ଡିଭାଇସ ଅନଲକ କରିବାକୁ ଏକ ପାଟର୍ନ ସେଟ କରନ୍ତୁ"</string>
     <string name="lockpassword_choose_your_profile_pattern_header" msgid="3101811498330756641">"ଏକ ୱାର୍କ ପାଟର୍ନ ସେଟ୍ କରନ୍ତୁ"</string>
@@ -2272,7 +2272,7 @@
     <string name="process_dex2oat_label" msgid="1190208677726583153">"ଆପ୍‌ ଅନୁକୁଳତା"</string>
     <string name="process_network_tethering" msgid="6822671758152900766">"ଟିଥରିଂ"</string>
     <string name="process_removed_apps" msgid="6544406592678476902">"କାଢ଼ି ଦିଆଯାଇଥିବା ଆପ୍ସ"</string>
-    <string name="battery_saver" msgid="7737147344510595864">"ବ୍ୟାଟେରୀ ସେଭର୍"</string>
+    <string name="battery_saver" msgid="7737147344510595864">"ବେଟେରୀ ସେଭର"</string>
     <string name="battery_saver_auto_title" msgid="6789753787070176144">"ସ୍ୱଚାଳିତ ଭାବେ ଚାଲୁ ହେବ"</string>
     <string name="battery_saver_auto_no_schedule" msgid="5123639867350138893">"କୋଣସି ସିଡୁଲ୍ ନାହିଁ"</string>
     <string name="battery_saver_auto_routine" msgid="4656495097900848608">"ଆପଣଙ୍କ ରୁଟିନ୍ ଅନୁସାରେ"</string>
@@ -3000,7 +3000,7 @@
     <string name="emergency_tone_alert" msgid="1977698889522966589">"ଟୋନ୍"</string>
     <string name="emergency_tone_vibrate" msgid="6282296789406984698">"କମ୍ପନ"</string>
     <string name="boot_sounds_title" msgid="5033062848948884111">"ଚାଲୁ ହେବାର ଶବ୍ଦ"</string>
-    <string name="live_caption_title" msgid="8617086825712756983">"ଲାଇଭ କ୍ୟାପ୍ସନ"</string>
+    <string name="live_caption_title" msgid="8617086825712756983">"ଲାଇଭ କେପ୍ସନ"</string>
     <string name="live_caption_summary" msgid="2898451867595161809">"ସ୍ୱତଃ କେପସନ ମିଡିଆ"</string>
     <string name="spatial_audio_speaker" msgid="9145233652433523302">"ଫୋନ ସ୍ପିକର"</string>
     <string name="spatial_audio_wired_headphones" msgid="2237355789145828648">"ତାରଯୁକ୍ତ ହେଡଫୋନଗୁଡ଼ିକ"</string>
@@ -4512,7 +4512,7 @@
     <string name="mobile_data_temp_using" msgid="5211002380149434155">"ଅସ୍ଥାୟୀ ରୂପେ <xliff:g id="SUBNAME">%1$s</xliff:g>କୁ ବ୍ୟବହାର କରୁଛି"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"ସଂଯୋଗ ନାହିଁ"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"ମୋବାଇଲ ଡାଟା ସ୍ୱତଃ-କନେକ୍ଟ ହେବ ନାହିଁ"</string>
-    <string name="mobile_data_disable_title" msgid="8438714772256088913">"ମୋବାଇଲ୍ ଡାଟା ବନ୍ଦ କରିବେ?"</string>
+    <string name="mobile_data_disable_title" msgid="8438714772256088913">"ମୋବାଇଲ ଡାଟା ବନ୍ଦ କରିବେ?"</string>
     <string name="mobile_data_disable_message" msgid="7829414836454769970">"<xliff:g id="CARRIER">%s</xliff:g> ମାଧ୍ୟମରେ ଡାଟା କିମ୍ବା ଇଣ୍ଟରନେଟକୁ ଆପଣଙ୍କର ଆକ୍ସେସ୍ ରହିବ ନାହିଁ। କେବଳ ୱାଇ-ଫାଇ ମାଧ୍ୟମରେ ଇଣ୍ଟରନେଟ୍ ଉପଲବ୍ଧ ହେବ।"</string>
     <string name="mobile_data_disable_message_default_carrier" msgid="4449469407705838612">"ଆପଣଙ୍କ କ୍ୟାରିଅର୍"</string>
     <string name="not_allowed_by_ent" msgid="1958611623122304411">"ଆପଣଙ୍କ ସଂସ୍ଥା ଦ୍ୱାରା ଅନୁମତି ଦିଆଯାଇ ନାହିଁ"</string>
