--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -3401,7 +3401,7 @@
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Tidak ada"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Tidak ada"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Alarm"</string>
-    <string name="zen_mode_alarms_summary" msgid="3388679177457223967">"Dari timer, alarm, sistem keamanan, dan aplikasi lainnya"</string>
+    <string name="zen_mode_alarms_summary" msgid="3388679177457223967">"Dari timer, alarm, sistem keamanan, dan aplikasi lain"</string>
     <string name="zen_mode_alarms_list" msgid="334782233067365405">"alarm"</string>
     <string name="zen_mode_alarms_list_first" msgid="2780418316613576610">"Alarm"</string>
     <string name="zen_mode_media" msgid="885017672250984735">"Suara media"</string>
