--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -353,7 +353,7 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"အကောင်းဆုံးရလဒ်များအတွက် Google အတွက် ပြုလုပ်ထားသည့် လက်မှတ်ရ ဖန်သားပြင် အကာအကွယ်သုံးပါ။ အခြားဖန်သားပြင် အကာအကွယ်များသုံးပါက သင့်ကလေး၏လက်ဗွေ အလုပ် လုပ်ချင်မှ လုပ်ပါမည်။"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_activeunlock_preference_title" msgid="4257580421087062228">"နာရီဖြင့်ဖွင့်ခြင်း"</string>
-    <string name="biometric_settings_intro_with_activeunlock" msgid="6583248094453119314">"‘မျက်နှာပြ လော့ခ်ဖွင့်ခြင်း’ နှင့် ‘လက်ဗွေသုံး လော့ခ်ဖွင့်ခြင်း’ ကို စနစ်ထည့်သွင်းသောအခါ သင်နှာခေါင်းစည်း တပ်ဆင်ထားလျှင် (သို့) မှောင်သောနေရာသို့ ရောက်နေလျှင် သင်၏ဖုန်းသည် လက်ဗွေကို တောင်းပါမည်။\n\nသင်၏ မျက်နှာ (သို့) လက်ဗွေကို အသိအမှတ်မပြုသောအခါ လက်ပတ်နာရီဖြင့် ဖွင့်နိုင်သည်။"</string>
+    <string name="biometric_settings_intro_with_activeunlock" msgid="6583248094453119314">"မျက်နှာပြ လော့ခ်ဖွင့်ခြင်းနှင့် လက်ဗွေသုံး လော့ခ်ဖွင့်ခြင်းကို ထည့်ထားလျှင် သင်နှာခေါင်းစည်း တပ်ထားချိန် (သို့) မှောင်သောနေရာသို့ ရောက်နေချိန်တွင် သင်၏ဖုန်းက သင့်လက်ဗွေကို တောင်းပါမည်။\n\nသင်၏ မျက်နှာ (သို့) လက်ဗွေကို အသိအမှတ်မပြုသောအခါ လက်ပတ်နာရီဖြင့် ဖွင့်နိုင်သည်။"</string>
     <string name="biometric_settings_intro_with_fingerprint" msgid="4312041617237493461">"သင်၏ လက်ဗွေကို အသိအမှတ်မပြုသောအခါ လက်ပတ်နာရီဖြင့် ဖွင့်နိုင်သည်။"</string>
     <string name="biometric_settings_intro_with_face" msgid="7658123658803417930">"သင်၏ မျက်နှာကို အသိအမှတ်မပြုသောအခါ လက်ပတ်နာရီဖြင့် ဖွင့်နိုင်သည်။"</string>
     <string name="biometric_settings_use_fingerprint_or_watch_for" msgid="1160830065613858095">"အောက်ပါကိုလုပ်ရန် လက်ဗွေ (သို့) နာရီ သုံးပါ-"</string>
@@ -381,7 +381,7 @@
     <string name="security_settings_biometric_preference_summary_none_enrolled" msgid="213377753727694575">"စနစ်ထည့်သွင်းရန် လိုအပ်သည်"</string>
     <string name="security_settings_biometric_preference_summary_both_fp_multiple" msgid="4821859306609955966">"မျက်နှာနှင့် လက်ဗွေများ ထည့်ပြီးပါပြီ"</string>
     <string name="security_settings_biometric_preference_summary_both_fp_single" msgid="684409535278676426">"မျက်နှာနှင့် လက်ဗွေ ထည့်ပြီးပါပြီ"</string>
-    <string name="biometric_settings_intro" msgid="4263069383955676756">"မျက်နှာပြ လော့ခ်ဖွင့်ခြင်းနှင့် လက်ဗွေသုံး လော့ခ်ဖွင့်ခြင်းကို ထည့်သွင်းသည့်အခါ သင်နှာခေါင်းစည်း တပ်ဆင်ထားလျှင် (သို့) မှောင်သောနေရာသို့ ရောက်နေလျှင် သင်၏ဖုန်းက သင့်လက်ဗွေကို တောင်းပါမည်"</string>
+    <string name="biometric_settings_intro" msgid="4263069383955676756">"မျက်နှာပြ လော့ခ်ဖွင့်ခြင်းနှင့် လက်ဗွေသုံး လော့ခ်ဖွင့်ခြင်းကို ထည့်ထားလျှင် သင်နှာခေါင်းစည်း တပ်ထားချိန် (သို့) မှောင်သောနေရာသို့ ရောက်နေချိန်တွင် သင်၏ဖုန်းက သင့်လက်ဗွေကို တောင်းပါမည်"</string>
     <string name="biometric_settings_category_ways_to_unlock" msgid="3384767901580915266">"လော့ခ်ဖွင့်ရန် နည်းလမ်းများ"</string>
     <string name="biometric_settings_category_use_face_fingerprint" msgid="4377659744376863913">"အောက်ပါကိုလုပ်ရန် မျက်နှာ (သို့) လက်ဗွေ သုံးခြင်း-"</string>
     <string name="biometric_settings_use_biometric_unlock_phone" msgid="8180914579885804358">"သင့်ဖုန်းကို ဖွင့်ရန်"</string>
