--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -502,7 +502,7 @@
     <string name="lock_settings_picker_new_lock_title" msgid="3113042086804290919">"స్క్రీన్‌ లాక్‌ను ఎంచుకోండి"</string>
     <string name="lock_settings_picker_update_lock_title" msgid="536853138943415927">"కొత్త స్క్రీన్ లాక్‌ను ఎంచుకోండి"</string>
     <string name="lock_settings_picker_new_profile_lock_title" msgid="2270462215256413800">"వర్క్ యాప్‌ల కోసం లాక్‌ను ఎంచుకోండి"</string>
-    <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"కొత్త వర్క్ లాక్ ఎంచుకోండి"</string>
+    <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"కొత్త వర్క్‌ప్లేస్ లాక్‌ను ఎంచుకోండి"</string>
     <string name="lock_settings_picker_biometrics_added_security_message" msgid="1105247657304421299">"అదనపు సెక్యూరిటీ కోసం, బ్యాకప్ స్క్రీన్ లాక్‌ను సెట్ చేయండి"</string>
     <string name="lock_settings_picker_biometric_message" msgid="2609666443527262781">"మీ బ్యాకప్ స్క్రీన్ లాక్ పద్ధతిని ఎంచుకోండి"</string>
     <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"మీ స్క్రీన్ లాక్‌ను మీరు మర్చిపోతే, మీ IT అడ్మిన్ దాన్ని రీసెట్ చేయలేరు."</string>
@@ -1400,9 +1400,9 @@
     <string name="settings_license_activity_loading" msgid="1653151990366578827">"లోడ్ చేస్తోంది…"</string>
     <string name="settings_safetylegal_activity_loading" msgid="1757860124583063395">"లోడ్ చేస్తోంది…"</string>
     <string name="lockpassword_choose_your_password_header" msgid="2407205113298094824">"పాస్‌వర్డ్‌ను సెట్ చేయండి"</string>
-    <string name="lockpassword_choose_your_profile_password_header" msgid="7038997227611893312">"వర్క్ పాస్‌వర్డ్‌ను సెట్ చేయండి"</string>
+    <string name="lockpassword_choose_your_profile_password_header" msgid="7038997227611893312">"వర్క్‌ప్లేస్ పాస్‌వర్డ్‌ను సెట్ చేయండి"</string>
     <string name="lockpassword_choose_your_pin_header" msgid="7754265746504679473">"PINను సెట్ చేయండి"</string>
-    <string name="lockpassword_choose_your_profile_pin_header" msgid="4581749963670819048">"వర్క్ PINను సెట్ చేయండి"</string>
+    <string name="lockpassword_choose_your_profile_pin_header" msgid="4581749963670819048">"వర్క్‌ప్లేస్ PINను సెట్ చేయండి"</string>
     <string name="lockpassword_choose_your_pattern_header" msgid="5674909390779586252">"ఆకృతిని సెట్ చేయండి"</string>
     <string name="lockpassword_choose_your_pattern_description" msgid="6808109256008481046">"అదనపు సెక్యూరిటీ కోసం, పరికరాన్ని అన్‌లాక్ చేయడానికి ఆకృతిని సెట్ చేయండి"</string>
     <string name="lockpassword_choose_your_profile_pattern_header" msgid="3101811498330756641">"వర్క్ ఆకృతిని సెట్ చేయండి"</string>
@@ -1411,12 +1411,12 @@
     <string name="lockpassword_choose_your_pin_message" msgid="7230665212172041837">"సెక్యూరిటీ కోసం పిన్‌ను సెట్ చేయండి"</string>
     <string name="lockpassword_choose_your_pin_header_for_fingerprint" msgid="2783879743691792556">"వేలిముద్రకు పిన్ సెట్ చేయండి"</string>
     <string name="lockpassword_confirm_your_password_header" msgid="6132312814563023990">"మీ పాస్‌వర్డ్‌ను మళ్లీ ఎంటర్ చేయండి"</string>
-    <string name="lockpassword_reenter_your_profile_password_header" msgid="3812040127714827685">"మీ వర్క్ పాస్‌వర్డ్‌‌ను మళ్లీ ఎంటర్ చేయండి"</string>
+    <string name="lockpassword_reenter_your_profile_password_header" msgid="3812040127714827685">"మీ వర్క్ పాస్‌వర్డ్‌ మళ్లీ ఎంటర్ చేయండి"</string>
     <string name="lockpassword_confirm_your_work_password_header" msgid="4647071231702288305">"మీ కార్యాలయ పాస్‌వర్డ్‌ను నమోదు చేయండి"</string>
     <string name="lockpassword_confirm_your_pattern_header" msgid="4037701363240138651">"మీ ఆకృతిని నిర్ధారించండి"</string>
     <string name="lockpassword_confirm_your_work_pattern_header" msgid="2668883108969165844">"మీ కార్యాలయ నమూనాను నమోదు చేయి"</string>
     <string name="lockpassword_confirm_your_pin_header" msgid="2241722970567131308">"మీ PINను మళ్లీ ఎంటర్ చేయండి"</string>
-    <string name="lockpassword_reenter_your_profile_pin_header" msgid="2890233614560435538">"మీ వర్క్ PINను మళ్లీ ఎంటర్ చేయండి"</string>
+    <string name="lockpassword_reenter_your_profile_pin_header" msgid="2890233614560435538">"మీ వర్క్‌ప్లేస్ PINను మళ్లీ ఎంటర్ చేయండి"</string>
     <string name="lockpassword_confirm_your_work_pin_header" msgid="4229765521391960255">"మీ ఆఫీస్ పిన్ నెంబ‌ర్‌ను ఎంట‌ర్‌ చేయండి"</string>
     <string name="lockpassword_confirm_passwords_dont_match" msgid="2100071354970605232">"పాస్‌‌వర్డ్‌లు మ్యాచ్ కాలేదు"</string>
     <string name="lockpassword_confirm_pins_dont_match" msgid="1103699575489401030">"PINలు మ్యాచ్ కాలేదు"</string>
