--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -3408,10 +3408,10 @@
     <string name="zen_mode_media_summary" msgid="7174081803853351461">"视频、游戏和其他媒体内容的声音"</string>
     <string name="zen_mode_media_list" msgid="2006413476596092020">"媒体"</string>
     <string name="zen_mode_media_list_first" msgid="7824427062528618442">"媒体"</string>
-    <string name="zen_mode_system" msgid="7301665021634204942">"触摸提示音"</string>
+    <string name="zen_mode_system" msgid="7301665021634204942">"触控音效"</string>
     <string name="zen_mode_system_summary" msgid="7225581762792177522">"键盘和其他按钮的音效"</string>
-    <string name="zen_mode_system_list" msgid="2256218792042306434">"轻触提示音"</string>
-    <string name="zen_mode_system_list_first" msgid="8590078626001067855">"轻触提示音"</string>
+    <string name="zen_mode_system_list" msgid="2256218792042306434">"触控音效"</string>
+    <string name="zen_mode_system_list_first" msgid="8590078626001067855">"触控音效"</string>
     <string name="zen_mode_reminders" msgid="1970224691551417906">"提醒"</string>
     <string name="zen_mode_reminders_summary" msgid="3961627037429412382">"来自任务和提醒"</string>
     <string name="zen_mode_reminders_list" msgid="3133513621980999858">"提醒"</string>
